# playchain

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libnamecoinconsensus.pc  libtool
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
contrib/devtools/: gen-manpages.py
contrib/docker/: Dockerfile  entrypoint.sh  xaya.conf
contrib/init/: README.md  xayad.service
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
contrib/namecoin/: convertBechAddress.py
contrib/seeds/: nodes_test.txt
contrib/signet/: miner
doc/: Doxyfile.in  README.md  build-osx.md  release-process.md
doc/man/: Makefile  Makefile.am  Makefile.in  xaya-cli.1  xaya-qt.1  xaya-tx.1  xaya-util.1  xaya-wallet.1  xayad.1
doc/xaya/: README.md  addressrestrictions.md  blockchain.md  currencies.md  games.md  interface.md  mining.md  trading.md
share/: setup.nsi  setup.nsi.in
share/examples/: xaya.conf
share/qt/: Info.plist  Info.plist.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  clientversion.cpp  headerssync.cpp  init.cpp  pow.cpp  powdata.cpp  powdata.h  validation.cpp  xaya-hash.cpp
src/.deps/: libbitcoin_common_a-auxpow.Po  libbitcoin_common_a-base58.Po  libbitcoin_common_a-bech32.Po  libbitcoin_common_a-chainparams.Po  (+67 more)
src/qt/: intro.cpp  (+71 more)
test/: config.ini
(+746 files in other folders)
